kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsgradient-analize
  labels:
    app: newsgradient-analize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newsgradient-analize
  template:
    metadata:
      labels:
        app: newsgradient-analize
    spec:
      volumes:
        - name: newsgradient-analize-persistent-storage
          persistentVolumeClaim:
            claimName: newsgradient-analize-pvc
      containers:
      - name: newsgradient-analize
        image: newsgradient-analize
        ports:
        - name: http
          containerPort: 5000
          protocol: TCP
        volumeMounts:
          - name: newsgradient-analize-persistent-storage
            mountPath: /app/uploaded_data
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 10
          periodSeconds: 15
        resources:
          requests:
            memory: 200Mi
            cpu: 100m
          limits:
            memory: 200Mi
            cpu: 100m
