kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: newsgradient-analize
spec:
  selector:
    app: newsgradient-analize
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
